update sound track

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             //myObstacle = new component(310, 360, "pipe.png", 300, 120, "image");
             myBackground = new component(1200, 580, "img/background.png", 0, 0, "image");
             myScore = new component("30px", "Consolas", "black", 280, 40, "text");
-            mySound = new sound("sound/laugh.mp3");
+            mySound = new sound("sound/anterablakash.mp3");
             myMusic = new sound("sound/bounce.mp3");
             myMusic.play();
             myGameArea.start();
