--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
         function startGame() {
             myGameArea.start();
-            myGamePiece = new component(50, 53, "img/edo.png", 300, 300, "image");
+            myGamePiece = new component(80, 63, "img/edo.png", 300, 300, "image");
             //myObstacle = new component(310, 360, "pipe.png", 300, 120, "image");
             myBackground = new component(1200, 580, "img/background.png", 0, 0, "image");
             myScore = new component("30px", "Consolas", "black", 280, 40, "text");
-            mySound = new sound("sound/antr.mpeg");
+            mySound = new sound("sound/nantr.mp3");
             myMusic = new sound("sound/laugh.mp3");
             myMusic.play();
             myGameArea.start();
